# wifi-module

./: .gitignore  README.md
pico-wifi/: CMakeLists.txt  devices.c  devices.h  global_params.h  pico_wifi.c  sensors.c  sensors.h  spi_params.h  string_templates.h  uart_params.h
wemos-wifi/: format.h  wemos-wifi.ino
